# vkrtlib

./: CMakeLists.txt  README.md
shaders/: doubleMe.cl  doubleMe.spv  matmul.cl  matmul.spv  test.cl  test.spv  vet2sum.cl  vet2sum.spv  vet3sum.cl  vet3sum.spv  vetsum.cl  vetsum.spv
src/: CMakeLists.txt  vkrtlib.cc  vkrtlib.h
test/: CMakeLists.txt  doubleMe.cc  matmul.cc  test.cc  tripleMe.cc  vet2sum.cc  vet3sum.cc  vetsum.cc
