find_package(vulkan REQUIRED)
add_executable (test test.cc)
add_executable (doubleMe doubleMe.cc)
add_executable (tripleMe tripleMe.cc)
add_executable (vetsum vetsum.cc)
add_executable (vet2sum vet2sum.cc)
add_executable (vet3sum vet3sum.cc)
add_executable (matmul matmul.cc)
target_link_libraries (test LINK_PUBLIC vkrtlib Vulkan::Vulkan)
target_link_libraries (doubleMe LINK_PUBLIC vkrtlib Vulkan::Vulkan)
target_link_libraries (tripleMe LINK_PUBLIC vkrtlib Vulkan::Vulkan)
target_link_libraries (vetsum LINK_PUBLIC vkrtlib Vulkan::Vulkan)
target_link_libraries (vet2sum LINK_PUBLIC vkrtlib Vulkan::Vulkan)
target_link_libraries (vet3sum LINK_PUBLIC vkrtlib Vulkan::Vulkan)
target_link_libraries (matmul LINK_PUBLIC vkrtlib Vulkan::Vulkan)
